--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@netlify/functions": "^2.3.0",
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.10",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "serverless-http": "^3.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "welcard": "^1.3.1"
   }
 }
