--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "serverless-http": "^3.2.0",
-    "typescript": "^5.2.2",
-    "welcard": "^1.3.1"
+    "typescript": "^5.2.2"
   }
 }
