--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@netlify/functions": "^2.3.0",
     "@types/express": "^4.17.20",
+    "@types/memory-cache": "^0.2.5",
     "@types/node": "^20.8.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "memory-cache": "^0.2.0",
     "serverless-http": "^3.2.0",
     "typescript": "^5.2.2"
   }
